@@ -1,4 +1,5 @@
 0.05
+ - Add edition number use case.
 
 0.04 2023-06-11T18:24:52+02:00
  - Add publication date use case.
